--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,7 +10,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px 200px 0;
+        width: 90%;
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
 
         &-home {
             text-decoration: none;
@@ -28,6 +31,7 @@
             border-radius: 50%;
             object-fit: cover;
             object-position: 0px -25px;
+            flex-shrink: 0;
         }
 
         &-name {
@@ -102,7 +106,5 @@
             }
 
         }
-
-
     }
 }
