--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer__bottom">
+        <p class="footer__bottom-text">
+            <span>© 2024 </span>
+            <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
+                <span class="footer__name">Alans Čertkojevs</span>
+            </a>
+        </p>
+    </div>
+    <div class="footer__social-icons">
+        <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+            <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
+        </a>
+        <a href=" https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
+            <i class="fa-brands fa-linkedin-in fa-xl" style="color: #ffffff;"></i>
+        </a>
+    </div>
+</footer>
