--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -11,6 +11,10 @@
     &__name {
         text-decoration: underline;
         color: white;
+
+        &:hover {
+            text-decoration: none;
+        }
     }
 
     &__bottom {
