--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,8 @@
             <a routerLink="/home" class="header__nav-home">
                 <div class="header__nav-brand">
                     <img src="assets/icon.jpg" alt="Logo" class="header__nav-icon">
-                    <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page"
+                        class="header__nav-brand--link">
                         <span class="header__nav-name">
                             <span class="header__nav-name-text">Alans Čertkojevs</span>
                             <img src="assets/verification.png" alt="verification" class="header__nav-name-verification">
