--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<main class="main">
+    <div class="main__container">
+        <div class="main__container-about">
+            <h1 class="main__container-title">
+                I write scripts.
+            </h1>
+            <p class="main__container-pretitle">
+                <a routerLink="/about" class="main__container-pretitle-link">Hello, my name is Alans</a>
+            </p>
+            <div class="main__container-content">
+                <p class="main__container-content-text">I specialize in scripting, web development, and data analysis,
+                    with
+                    experience in Python, SQL, and various web technologies.
+                </p>
+            </div>
+        </div>
+        <div class="main__container-projects">
+            <h2 class="main__container-projects-heading">Featured Projects</h2>
+        </div>
+    </div>
+</main>
