footer top line

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@
     margin-top: auto;
     width: 100%;
     padding: 10px 0;
-    border-top: 4px solid black;
+    border-top: 2px solid #251e1e;
     display: flex;
     gap: 40px;
     justify-content: center;
