--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,10 +25,13 @@
             margin-top: 32px;
             margin-bottom: 0;
 
-
             &-link {
                 text-decoration: none;
                 color: #AC87C5;
+
+                &:hover {
+                    color: #9156c4;
+                }
             }
         }
 
@@ -47,10 +50,127 @@
             color: white;
         }
 
-        &-projects-heading {
-            font-size: 40px;
-            font-family: "Roboto Sans";
-            color: white;
+        &-projects {
+            margin-bottom: 40px;
+
+            &-heading {
+                font-size: 40px;
+                font-family: "Roboto Sans";
+                color: white;
+
+            }
+
+            &-list {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+                gap: 40px;
+                align-items: start;
+            }
+
+            &-item {
+                position: relative;
+                overflow: hidden;
+                background-color: #1A1A1A;
+                padding: 20px;
+                border-radius: 8px;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                height: 220px;
+                background-size: cover;
+                background-position: center;
+
+                &:before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: inherit;
+                    // filter: brightness(50%) blur(2px);
+                    z-index: 0;
+                    transition: filter 0.3s ease;
+                }
+
+                &-overlay {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-size: cover;
+                    background-position: center;
+                    transition: filter 0.3s ease;
+                    z-index: 0;
+                }
+
+                &:hover {
+                    transform: translateY(-10px);
+                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+                    // filter: brightness(70%) blur(2px);
+
+                    .main__container-projects-item-description {
+                        opacity: 1;
+                        visibility: visible;
+                        z-index: 1;
+                    }
+                }
+
+                &-title {
+                    margin: 0px;
+                    font-size: 28px;
+                    margin-bottom: 10px;
+                    color: #FFFFFF;
+                    font-family: "Roboto Sans";
+                    z-index: 1;
+                    position: relative;
+                }
+
+                &-description {
+                    position: relative;
+                    z-index: 1;
+                    font-size: 20px;
+                    color: #ffffff;
+                    font-family: "Roboto";
+                    opacity: 0;
+                    visibility: hidden;
+                    // transition: opacity 2s ease, visibility 2s ease;
+                    font-weight: 300;
+                }
+            }
+
+            @media (max-width: 1105px) {
+                &-list {
+                    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                }
+            }
+
+            &-footer {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                font-size: 20px;
+
+                .fa-arrow-right {
+                    transition: transform 0.3s ease;
+                }
+
+                &:hover .fa-arrow-right {
+                    transform: translateX(10px);
+                    color: #9156c4;
+                }
+
+                &__see-all {
+                    text-decoration: none;
+                    color: #AC87C5;
+                    font-family: "Roboto";
+                    transition: transform 0.3s ease;
+                    font-weight: bold;
+
+                    &:hover {
+                        color: #9156c4;
+                    }
+                }
+            }
         }
     }
 }
