--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer class="footer">
     <div class="footer__bottom">
-        <p class="footer__bottom-text">
+        <div class="footer__bottom-text">
             <span>© 2024 </span>
             <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
                 <span class="footer__name">Alans Čertkojevs</span>
             </a>
-        </p>
+        </div>
     </div>
     <div class="footer__social-icons">
         <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
