--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,14 +8,6 @@
     gap: 40px;
     justify-content: center;
 
-    &__name {
-        text-decoration: underline;
-        color: white;
-
-        &:hover {
-            text-decoration: none;
-        }
-    }
 
     &__bottom {
         &-text {
@@ -29,5 +21,14 @@
         display: flex;
         align-items: center;
         gap: 20px;
+    }
+}
+
+a {
+    text-decoration: underline;
+    color: white;
+
+    &:hover {
+        text-decoration: none;
     }
 }
