--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,57 @@
-<p>about works!</p>
+<div class="about">
+    <div class="about__container">
+        <section class="about__intro">
+            <h1 class="about__intro--heading">Hey, there 👋</h1>
+            <div class="about__intro--container">
+                <div class="about__intro--text-container">
+                    <p class="about__intro--text">I'm Alans Čertkojevs, and I'm passionate about web development, web
+                        scraping, and working with data to perform effective data manipulation.
+                    </p>
+                    <p class="about__intro--text">
+                        With a keen eye for detail and a drive for continuous learning, I aim to build impactful and
+                        accessible digital experiences.
+                    </p>
+                </div>
+                <img src="assets/icon.jpg" alt="verification" class="about__intro--image">
+            </div>
+
+        </section>
+        <div class="about__innter--container">
+            <section class="about__work">
+                <h2 class="about__work--heading">Work</h2>
+                <p class="about__work--text">
+                    I work at <a href="https://exante.eu" class="about__work--link">Exante</a>, financial services
+                    company offering multi-asset
+                    brokerage, trading
+                    platform
+                    access,
+                    and institutional solutions for professional and institutional investors.
+                </p>
+            </section>
+            <section class="about__offline">
+                <h2 class="about__offline--heading">Offline</h2>
+                <p class="about__offline--text">In summer i enjoy running, basktetball, outdoor workouts, enjoy the sun.
+                    In winter i can be found playing, favourite video games, like elden ring, modded minecraft,
+                    terraria.
+                </p>
+            </section>
+            <section class="about__online">
+                <h2 class="about__online--heading">Online</h2>
+                <div class="about__online--container">
+                    <div class="about__online--container">
+                        <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer"
+                            aria-label="GitHub" class="about__online--href">
+                            <i class="fa-brands fa-github fa-xl"></i>
+                            <span class="about__online--text">GitHub</span>
+                        </a>
+                        <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer"
+                            aria-label="LinkedIn" class="about__online--href">
+                            <i class="fa-brands fa-linkedin-in fa-xl"></i>
+                            <span class="about__online--text">LinkedIn </span>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
