--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,8 +11,12 @@
         &-about {
             display: flex;
             flex-direction: column;
-            padding-top: 70px;
-            padding-bottom: 70px;
+            padding: 70px 0;
+
+            @media (max-width: 768px) {
+                padding: 30px 0;
+
+            }
         }
 
         &-pretitle {
