--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -19,16 +19,16 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        margin-top: 50px;
 
         &--heading {
-            display: flex;
+            letter-spacing: 2px;
+            font-family: "Roboto Sans";
+            font-weight: bold;
+            text-transform: uppercase;
+            font-size: 70px;
             color: white;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            font-family: "Roboto";
-            font-size: 52px;
-            font-weight: 400;
+            line-height: 2px;
         }
 
         &--text {
@@ -118,6 +118,7 @@
             font-size: 22px;
             color: white;
             line-height: 1.65;
+            letter-spacing: 0.5px;
         }
 
         &--link {
@@ -158,6 +159,7 @@
             font-size: 22px;
             color: white;
             line-height: 1.65;
+            letter-spacing: 0.5px;
         }
     }
 
@@ -201,6 +203,7 @@
             font-size: 22px;
             color: #AC87C5;
             text-decoration: underline;
+            letter-spacing: 0.5px;
         }
 
         &--text:hover {
