--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -6,7 +6,6 @@
         display: flex;
         width: 40%;
         flex-direction: column;
-        align-items: center;
         max-width: 1200px;
         margin: 50px 0;
     }
@@ -23,6 +22,8 @@
         font-size: 70px;
         color: white;
         line-height: 2px;
+        display: flex;
+        justify-content: center;
     }
 
     &--title {
