--- a/src/app/pagination/pagination.component.scss
+++ b/src/app/pagination/pagination.component.scss
@@ -22,7 +22,7 @@
             }
 
             &:disabled {
-                background: #dcdcdc;
+                background: #747171;
                 cursor: not-allowed;
                 background-size: initial;
                 background-position: initial;
