--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div id="page-container">
+    <app-header></app-header>
+    <main id="content-wrap">
+        <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+</div>
