--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -44,8 +44,8 @@
                             <i class="fa-brands fa-github fa-xl"></i>
                             <span class="about__online--text">GitHub</span>
                         </a>
-                        <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer"
-                            aria-label="LinkedIn" class="about__online--href">
+                        <a href="https://www.linkedin.com/in/alans-%C4%8Dertkojevs-394ab7245" target="_blank"
+                            rel="noopener noreferrer" aria-label="LinkedIn" class="about__online--href">
                             <i class="fa-brands fa-linkedin-in fa-xl"></i>
                             <span class="about__online--text">LinkedIn </span>
                         </a>
