--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
             <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
         </a>
-        <a href=" https://linkedin.com/in/yourusername" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/alans-%C4%8Dertkojevs-394ab7245" target="_blank" aria-label="LinkedIn">
             <i class="fa-brands fa-linkedin-in fa-xl" style="color: #ffffff;"></i>
         </a>
     </div>
