--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -39,7 +39,7 @@
                 <h2 class="about__online--heading">Online</h2>
                 <div class="about__online--container">
                     <div class="about__online--container">
-                        <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer"
+                        <a href="https://github.com/acertkojevs" target="_blank" rel="noopener noreferrer"
                             aria-label="GitHub" class="about__online--href">
                             <i class="fa-brands fa-github fa-xl"></i>
                             <span class="about__online--text">GitHub</span>
