--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="footer__social-icons">
-        <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/acertkojevs" target="_blank" aria-label="GitHub">
             <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
         </a>
         <a href="https://www.linkedin.com/in/alans-%C4%8Dertkojevs-394ab7245" target="_blank" aria-label="LinkedIn">
