styling for diffrent widths

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -21,6 +21,10 @@
         flex-direction: column;
         margin-top: 50px;
 
+        @media (max-width: 768px) {
+            margin-top: 15px;
+        }
+
         &--heading {
             letter-spacing: 2px;
             font-family: "Roboto Sans";
@@ -29,6 +33,19 @@
             font-size: 70px;
             color: white;
             line-height: 2px;
+            text-wrap: nowrap;
+
+            @media (max-width: 768px) {
+                font-size: 42px;
+            }
+
+            @media (max-width: 450px) {
+                font-size: 28px;
+            }
+        }
+
+        &--emoji {
+            flex-shrink: 0;
         }
 
         &--text {
@@ -82,6 +99,12 @@
             flex: 0 0 auto;
             object-position: 0px -200px;
             order: -1;
+
+            @media (max-width: 450px) {
+                width: 250px;
+                height: 250px;
+                object-position: 0px -150px;
+            }
         }
     }
 
@@ -111,6 +134,10 @@
             font-weight: 400;
             line-height: 1.4;
             letter-spacing: 1px;
+
+            @media (max-width: 768px) {
+                font-size: 24px;
+            }
         }
 
         &--text {
@@ -119,6 +146,10 @@
             color: white;
             line-height: 1.65;
             letter-spacing: 0.5px;
+
+            @media (max-width: 768px) {
+                font-size: 18px;
+            }
         }
 
         &--link {
@@ -152,6 +183,10 @@
             font-weight: 400;
             line-height: 1.4;
             letter-spacing: 1px;
+
+            @media (max-width: 768px) {
+                font-size: 24px;
+            }
         }
 
         &--text {
@@ -160,6 +195,10 @@
             color: white;
             line-height: 1.65;
             letter-spacing: 0.5px;
+
+            @media (max-width: 768px) {
+                font-size: 18px;
+            }
         }
     }
 
@@ -182,6 +221,10 @@
             line-height: 1.4;
             letter-spacing: 1px;
             line-height: 1.65;
+
+            @media (max-width: 768px) {
+                font-size: 24px;
+            }
         }
 
         &--container {
