--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="about">
     <div class="about__container">
         <section class="about__intro">
-            <h1 class="about__intro--heading">Hey, there 👋</h1>
+            <h1 class="about__intro--heading">Hey, there <span class="about__intro--emoji">👋</span></h1>
             <div class="about__intro--container">
                 <div class="about__intro--text-container">
                     <p class="about__intro--text">I'm Alans Čertkojevs, and I'm passionate about web development, web
@@ -30,9 +30,10 @@
             </section>
             <section class="about__offline">
                 <h2 class="about__offline--heading">Offline</h2>
-                <p class="about__offline--text">In summer i enjoy running, basktetball, outdoor workouts, enjoy the sun.
-                    In winter i can be found playing, favourite video games, like elden ring, modded minecraft,
-                    terraria.
+                <p class="about__offline--text">In summer, I enjoy running, playing basketball, doing outdoor workouts.
+                    During winter, you can find me playing my favorite video games like Elden
+                    Ring, modded Minecraft, and Terraria. These hobbies help me balance my professional life and keep my
+                    creativity flowing.
                 </p>
             </section>
             <section class="about__online">
