--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,12 +8,21 @@
     gap: 40px;
     justify-content: center;
 
+    @media (max-width: 768px) {
+        padding: 15px 0;
+        gap: 20px;
+    }
+
 
     &__bottom {
         &-text {
             color: white;
             font-size: 18px;
             font-family: 'Roboto Slab';
+
+            @media (max-width: 768px) {
+                font-size: 14px;
+            }
         }
     }
 
