sslv auto scrapper html scss

--- a/src/app/projects/projectsComponents/ss-lv-auto-webscraper/ss-lv-auto-webscraper.component.html
+++ b/src/app/projects/projectsComponents/ss-lv-auto-webscraper/ss-lv-auto-webscraper.component.html
@@ -1,1 +1,37 @@
-<p>ss-lv-auto-webscraper works!</p>
+<div class="article">
+    <article class="article--container">
+        <h1 class="article--title">SS.LV Auto WebScraper</h1>
+        <p class="article--date">2024-06-12</p>
+        <p class="article--description">
+            A tool what fetches data
+            such
+            as descriptions, links, models, years, capacities, mileage, and prices from multiple pages and exports it to
+            a
+            CSV file.
+        </p>
+
+        <h3 class="article--subheading">Features</h3>
+        <ul class="article--list">
+            <li class="article--list--item">Fetches car listings from ss.lv</li>
+            <li class="article--list--item">Extracts detailed information including description, link, model, year,
+                engine capacity, mileage, and price</li>
+            <li class="article--list--item">Handles multiple pages of listings</li>
+            <li class="article--list--item">Exports data to a CSV file</li>
+        </ul>
+
+        <h3 class="article--subheading">Dependencies</h3>
+        <p class="article--text">
+            The code is written in Python and utilizes the following libraries:
+        </p>
+        <ul class="article--list">
+            <li class="article--list--item">requests</li>
+            <li class="article--list--item">beautifulsoup4</li>
+            <li class="article--list--item">pandas</li>
+        </ul>
+        <h3 class="article--subheading">Setup and Usage</h3>
+        <p class="article--text">
+            Please visit the <a href="https://github.com/acertkojevs/sslv-car-scraper" class="article--link">GitHub
+                repository</a> for setup instructions, examples of usage, and more detailed information.
+        </p>
+    </article>
+</div>
