--- a/src/app/projects/projectsComponents/ss-lv-auto-webscraper/ss-lv-auto-webscraper.component.html
+++ b/src/app/projects/projectsComponents/ss-lv-auto-webscraper/ss-lv-auto-webscraper.component.html
@@ -1,6 +1,6 @@
 <div class="article">
     <article class="article--container">
-        <h1 class="article--title">SS.LV Auto WebScraper</h1>
+        <h1 class="article--title">SS.LV Car WebScraper</h1>
         <p class="article--date">2024-06-12</p>
         <p class="article--description">
             A tool what fetches data
