hover effect for link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,13 +28,13 @@
                     </a>
                 </div>
             </div>
-            <p class="main__container-projects-footer">
+            <div class="main__container-projects-footer">
                 <a routerLink="/projects" class="main__container-projects-footer__see-all">See All Projects
                     <span class="main__container-projects-footer__icon">
                         <i class="fa-solid fa-arrow-right"></i>
                     </span>
                 </a>
-            </p>
+            </div>
         </div>
     </div>
 </main>
