--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -163,6 +163,8 @@
 
                     @media (max-width: 768px) {
                         font-size: 16px;
+                        opacity: 1;
+                        visibility: visible;
                     }
                 }
 
